[FIX] html_builder: correct options layout issues
This commit fixes several options-related issues in the HTML Builder:
- Fixed the height of the font-family picker and the “None” shadow
option; the issue was caused by the font metrics.
- Improved the vertical sublevel line, which appeared blurry due to
the transform property and an incorrect height.
- Harmonized the padding of the visibility layout options and
the background image position to align with the other pickers.

task-4985348

closes odoo/odoo#229086

--- a/addons/html_builder/static/src/core/building_blocks/select_many2x.scss
+++ b/addons/html_builder/static/src/core/building_blocks/select_many2x.scss
@@ -17,6 +17,7 @@
 
     .o-hb-selectMany2X-toggle {
         &, &.btn-light.bg-light {
+            --btn-padding-x: #{map-get($spacers , 2)};
 
             @include button-variant(
                 $background: $o-we-item-clickable-bg,
